# tp3-ordonnancement

./: CMakeLists.txt  Device.cpp  Device.h  Machine.cpp  Machine.h  Manager.cpp  Manager.h  README.md  Team.cpp  Team.h  main.cpp
assets/: devices.json
